--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </tbody>
     </table>
     <hr>
-    <h3><a href="hobbies.html">My hobbies</a></h3>
+    <h3><a href="Hobbies.html">My hobbies</a></h3>
     <h3><a href="Contacts.html">My contacts</a></h3>
     </body>
 </html>
